raw: update 1.20.6 DAY 1
Took 4 hours 11 minutes